z-index cant solve

--- a/style.css
+++ b/style.css
@@ -449,6 +449,7 @@ button:hover {
 }
 
 .techDivTitle {
+  position: relative;
   width: 100%;
   text-align: center;
   text-decoration: none;
@@ -459,6 +460,7 @@ button:hover {
   background-color: #333333;
   color: white;
   padding: 5px;
+  z-index: 1;
 }
 
 .tech img {
@@ -480,7 +482,7 @@ button:hover {
 
   padding: 5px 0;
   position: absolute;
-  z-index: 1;
+  z-index: 10;
   top: 100%;
   left: 50%;
   margin-left: -60px;
